# smops

./: .editorconfig  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: publish.yml  test.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
sade/: __init__.py  smooth.py
smops/: __init__.py  cmdline.py  schema.yml  smooth.py
tests/: __init__.py  test_smops.py
