# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html?
# https://setuptools.pypa.io/en/latest/references/keywords.html
[metadata]
  name = smops
  version = attr: smops.VERSION
  author = attr: smops.AUTHOR
  email = attr: smops.EMAIL
  description = Python script for interpolating FITS model images over frequency
  long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
  keywords = smops, model frequency interpolation, FITS images
  license = MIT license
  license_files = file: LICENSE.rst
  url = https://github.com/mulan-94/smops
  python_requires = >=3.8
  classifiers=
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
  
  tests_require = 
    pytest>=3
  test_suite = tests
  

[options]
  zip_safe = False
  install_requires = 
    astropy
    dask
    python-casacore
    psutil
    numpy
  include_package_data = True


[bdist_wheel]
universal = 1

[flake8]
exclude = docs


[tool:pytest]
collect_ignore = ['setup.py']
